tests/errors/operand_type_53/e4.src
.IPPcode21

DEFVAR GF@a
MOVE GF@a int@5

JUMPIFEQ label GF@a string@5
LABEL label
